--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Danfo&family=DynaPuff:wght@400..700&display=swap');
 
 html {
   --line-color: #e5e7eb;
@@ -12,4 +13,13 @@ html.dark {
 
 .borderBlack {
   @apply border border-black/10;
+}
+
+span {
+  font-family: "DynaPuff", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
