--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,12 @@ span {
   font-variation-settings:
     "wdth" 100;
 }
+
+p{
+  font-family: "DynaPuff", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
