--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Danfo&family=DynaPuff:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Wittgenstein:ital,wght@0,400..900;1,400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 html {
   --line-color: #e5e7eb;
@@ -13,6 +14,21 @@ html.dark {
 
 .borderBlack {
   @apply border border-black/10;
+}
+
+.about {
+  font-weight: 500;
+  font-family: 'Supreme', sans-serif;
+}
+
+.aboutHero {
+  font-weight: 700;
+  font-family: 'Supreme', sans-serif;
+}
+
+.aboutHeroSpan {
+  font-weight: 500;
+  font-family: 'Supreme', sans-serif;
 }
 
 span {
